--- a/styles/imc.css
+++ b/styles/imc.css
@@ -11,12 +11,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  margin-right: 20px;
   border: 2px solid black;
   border-radius: 10px;
   width: 250px;
   height: 250px;
-}
-
-.cat {
-  text-align: center;
 }
